--- a/content/post/2018-04-23-kookbal.md
+++ b/content/post/2018-04-23-kookbal.md
@@ -1,11 +1,10 @@
 ---
-title: 환경
+title: Kookbal
 author: 환경
 date: '2018-04-23'
-slug: ''
+slug: kookbal
 categories:
   - 환경
 tags:
   - 미세먼지
 ---
-# 미세먼지 시로시로..
